# RocketBlockLanding

./: CMakeLists.txt  Readme.md
form/: widget.ui
include/: aerodynamic.h  atmosphericResistance.h  constants.h  dynamicRungekutt.h  dynamiccalc.h  graphic.h  landingcalc.h  matrix.h  rungekutt.h  widget.h
src/: aerodynamic.cpp  dynamicRungekutt.cpp  dynamiccalc.cpp  landingcalc.cpp  matrix.cpp  rungekutt.cpp  widget.cpp
